# learning-labs

./: README.md  kubernetes-learning-guide.md
ansible/: .gitignore  COMPLETE.txt  LAB-STRUCTURE.md  LAB-SUMMARY.md  QUICKSTART.md  README.md  START-HERE.md  ansible-network-guide.md  requirements.txt  setup.sh
ansible/inventory/: hosts.ini
ansible/playbooks/: 01-gather-facts.yml  02-backup-configs.yml  03-configure-vlans.yml  04-base-config.yml  05-compliance-check.yml  06-interface-audit.yml  full-deployment.yml  use-backup-role.yml  use-compliance-role.yml  use-vlan-role.yml
ansible/templates/: base-config.j2  compliance-report.j2  interface-config.j2  vlan-config.j2
ansible/test-environment/: Dockerfile.netauto  README.md  docker-compose.yml
containerlab/: QUICKSTART.md  README.md  START-HERE.md  simple-lab.clab.yml
docker-basics/: .gitignore  COMPLETE.txt  QUICKSTART.md  README.md  START-HERE.md
fastapi-demo/: fastapi-deployment.yaml
git/: QUICKSTART.md  README.md  START-HERE.md  ideas.txt
kubernetes/: README.md
mcp/: .env.example  .gitignore  INDEX.md  MCP-VS-REST.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  app.py  config.yaml  example_FastMCP.py  mcp_client.py  network_tools.py  ollama_client.py  pyproject.toml  requirements.txt  webui_framework_README.md
mcp/scenarios/: README.md  automated-docs.md  challenges.md  log-analysis.md  network-troubleshooting.md
mcp/tools/: calculator.py  config.json  network_tools.py  requirements.txt  web_search.py
python-intro/: COMPLETE.txt  QUICKSTART.md  README.md  START-HERE.md  setup.sh
(+67 files in other folders)
